General update here and there

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   ></pokemon-search>
 
   <!-- Include the web component script -->
-  <script src="pokemon-search.js"></script>
+  <script src="https://unpkg.com/pokemon-search-component/dist/pokemon-search.min.js"></script>
 </body>
 </html>
 
